[project]
name = "geminiapi"
description = "ComfyUI custom nodes for integrating multiple external APIs including Gemini, OpenAI, Replicate, and ElevenLabs directly into local workflows. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["replicate", "pillow", "numpy", "torch", "google-genai", "opencv-python", "torchaudio"]

[project.urls]
Repository = "https://github.com/zhanglongxiao111/Comfyui-geminiapi"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/zhanglongxiao111/Comfyui-geminiapi/wiki"
"Bug Tracker" = "https://github.com/zhanglongxiao111/Comfyui-geminiapi/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "Comfyui-geminiapi"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

